updated profile links

--- a/weather/templates/weather/api.html
+++ b/weather/templates/weather/api.html
@@ -3,10 +3,10 @@
 {% block content %}
     <div class="box">
         <h2>READ ME</h2>
-        <p>This App was developed by <a href="https://specialist-avenger.github.io/my_portfolio/" target="blank">Ike Gabriel</a> using <span>Python, Django, Vanilla + Bootstrap Css</span> 
+        <p>This App was developed by <a href="https://ikegabriel.github.io/my_portfolio/" target="blank">Ike Gabriel</a> using <span>Python, Django, Vanilla + Bootstrap Css</span> 
             and consuming the <a href="https://openweathermap.org" target="blank">openweathermap</a> Api.</p>
         <p>
-            To view more of my projects or wish to contact me, Check out my <a href="https://specialist-avenger.github.io/my_portfolio/" target="blank">Portfolio</a>
+            To view more of my projects or wish to contact me, Check out my <a href="https://ikegabriel.github.io/my_portfolio/" target="blank">Portfolio</a>
         </p>
     </div>
 {% endblock %}
